@@ -211,6 +211,15 @@ PKG_CHECK_MODULES([LIBXFT], [xft], [
                    ],[AC_MSG_ERROR([pcmanx_gtk2 depends on Xft!])]) 
 
 dnl *********************************************************************
+dnl ** X11 **************************************************************
+dnl *********************************************************************
+
+PKG_CHECK_MODULES([LIBX11], [x11], [
+                   GUI_CFLAGS="$GUI_CFLAGS $LIBX11_CFLAGS"
+                   GUI_LIBS="$GUI_LIBS $LIBX11_LIBS"
+                   ],[AC_MSG_ERROR([pcmanx_gtk2 depends on libx11-dev])])
+
+dnl *********************************************************************
 dnl ** IPv6 *************************************************************
 dnl *********************************************************************
 
